Fix overflow for code blocks

--- a/views/screen.sass
+++ b/views/screen.sass
@@ -177,7 +177,7 @@ nav
     @include box-shadow(0 1px 0 rgba(255, 255, 255, .02), 0 1px 2px rgba(0, 0, 0, .25) inset)
     line-height: 1.25em
     margin-bottom: 1.71428571em
-    overflow-x: scroll
+    overflow-x: auto
     padding: 0.923076923em
 
     &:last-child
